@@ -151,7 +151,7 @@ static void show_matching_spells(object *op, char *params) {
                 draw_ext_info_format(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_TYPE_COMMAND_SUCCESS,
                                      "\n[fixed]%s spells %.*s <lvl> <sp>",
                                      "\n%s spells %.*s <lvl> <sp>",
-                                     tmp, 12-strlen(tmp), "              ");
+                                     tmp, (int)(12-strlen(tmp)), "              ");
             }
             draw_ext_info_format(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_TYPE_COMMAND_SUCCESS,
                                  "[fixed]%s",
