@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/c_range.c, server/init.c, server/shop.c, server/login.c, server/c_wiz.c:
+  Fix some format string bugs (found using the GCC format __attribute__ for some
+  crossfire functions).
+server/c_wiz.c: Add some missing [fixed] to style_info output.
+Arvid Norlander 2009-02-17
+
 socket/item.c, socket/loop.c, socket/lowlevel.c, socket/metaserver.c: Fix some
   format string bugs (found using the GCC format __attribute__ for some
   crossfire functions).
